--- a/Test2DProject/Assembly-CSharp-Editor.csproj
+++ b/Test2DProject/Assembly-CSharp-Editor.csproj
@@ -46,9 +46,12 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\SpeechRecognition\Editor\SpeechDictionaryEditor.cs" />
      <Compile Include="Assets\StrumpyShaderEditor\Editor\Scripts\NodeEditorWindow.cs" />
      <Compile Include="Assets\StrumpyShaderEditor\Editor\Scripts\StrumpyPreviewWindow.cs" />
      <None Include="Assets\StrumpyShaderEditor\Editor\Resources\Internal\Temp\TempShader.shader" />
+     <None Include="Assets\SpeechRecognition\readme.txt" />
+     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\StrumpyShaderEditor\Editor\Resources\Internal\TextureCopy.shader" />
  <Reference Include="StrumpyShaderEditor">
  <HintPath>C:/Users/Michael/Documents/Test2DProject/Assets/StrumpyShaderEditor/Editor/StrumpyShaderEditor.dll</HintPath>
@@ -58,6 +61,8 @@
  </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{EA5E01B6-6292-D772-30FE-378B39EF950A}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{BF8F8663-80AC-F4C9-5FA1-ADEF3031675E}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-UnityScript.unityproj">
